--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.highlight-date {
+    @apply bg-red-700 text-white hover:cursor-not-allowed ;
+  }
